Fixed the status icons misalignment

--- a/bitpop_specific/extensions/facebook_friends/css/sidebar.css
+++ b/bitpop_specific/extensions/facebook_friends/css/sidebar.css
@@ -53,7 +53,7 @@ ul li img.status {
 }
 span.leftSide {
   display: inline-block;
-  width: 160px;
+  width: 155px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
